packages/errors/test/__snapshots__/COMPONENT_TESTING_MISMATCHED_DEPENDENCIES.ansi
[31mWe detected that you have versions of dependencies that are not officially supported:[39m
[31m[39m
[31m[90m - [39m[31m[94m`vite`. Expected ^=2.0.0 || ^=3.0.0 || ^=4.0.0 || ^=5.0.0, found 1.0.0.[39m[31m[39m
[31m[39m
[31mIf you're experiencing problems, ensure your dependencies are on a supported version and restart Cypress.[39m
[31m[39m